 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_widget_background"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:gravity="center|fill_horizontal"
         android:orientation="horizontal">

         <TextView
             android:id="@+id/place"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="0dp"
             android:text="@string/text_place"
             android:textColor="#F8F5F5"
             android:textSize="20dp" />

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"

             android:layout_marginRight="0dp"
             android:gravity="right"
             android:orientation="horizontal">

             <TextView
                 android:id="@+id/time_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|right"
                 android:layout_marginRight="5dp"
                 android:text="@string/time"
                 android:textColor="#F1EAEA"
                 android:textSize="12dp" />

             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="21dp"
                 android:layout_height="wrap_content"
                 android:src="@android:drawable/ic_popup_sync" />
         </LinearLayout>


     </LinearLayout>

     <TextView
         android:id="@+id/temperature"
         style="@style/widget_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:text="@string/text_temperature"
         android:textColor="#EFECEC"
         android:textSize="30dp" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="left"
         android:orientation="horizontal">

         <LinearLayout
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:gravity="center"
             android:orientation="vertical">

             <TextView
                 android:id="@+id/day4"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_day4"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />

             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />

             <TextView
                 android:id="@+id/temperature4"
                 style="@style/widget_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_temperature1"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:gravity="center"
             android:orientation="vertical">

             <TextView
                 android:id="@+id/day5"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_day5"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />

             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />

             <TextView
                 android:id="@+id/temperature5"
                 style="@style/widget_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_temperature1"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:gravity="center"
             android:orientation="vertical">

             <TextView
                 android:id="@+id/day6"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_day6"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />

             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />

             <TextView
                 android:id="@+id/temperature6"
                 style="@style/widget_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_temperature1"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:gravity="center"
             android:orientation="vertical">

             <TextView
                 android:id="@+id/day7"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_day7"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />

             <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />

             <TextView
                 android:id="@+id/temperature7"
                 style="@style/widget_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_temperature1"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:gravity="center"
             android:orientation="vertical">

             <TextView
                 android:id="@+id/day8"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_day8"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />

             <ImageView
                 android:id="@+id/imageView8"
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />

             <TextView
                 android:id="@+id/temperature8"
                 style="@style/widget_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_temperature1"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="center"
             android:orientation="vertical">

             <TextView
                 android:id="@+id/day9"
                 style="@style/widget_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_day9"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />

             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="0dp"
                 app:srcCompat="@android:drawable/ic_menu_rotate" />

             <TextView
                 android:id="@+id/temperature9"
                 style="@style/widget_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
                 android:gravity="center"
                 android:text="@string/text_temperature1"
                 android:textColor="#EFECEC"
                 android:textSize="17sp"
                 android:textStyle="normal" />
         </LinearLayout>

     </LinearLayout>

</LinearLayout>